--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -51,9 +51,9 @@
                         <div class="main-menu d-none d-lg-block">
                             <nav>
                                 <ul id="navigation">
-                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class="active"><a href="/Index">Home</a></li>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="services.html">Services</a></li>
+                                    <li><a href="/Service">Services</a></li>
                                     <li>
                                         <a href="blog.html">Blog</a>
                                         <ul class="submenu">
