--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,8 +15,8 @@
                         <div class="row">
                             <div class="col-xl-7 col-lg-9 col-md-10 col-sm-9">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">Quality laundry service in your city</h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">We take care about cleenness of your cloth</p>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">Quality Home Cleaning Service </h1>
+                                    <p data-animation="fadeInLeft" data-delay="0.4s">We care for the cleanliness of your home</p>
                                     <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Explore Services</a>
                                 </div>
                             </div>
@@ -32,8 +32,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <span class="element">Our Process</span>
-                            <h2>This is how we work</h2>
+                            <span class="element">Our Cleaning Process</span>
+                            <h2>How Homecare Works</h2>
                         </div>
                     </div>
                 </div>
@@ -44,8 +44,8 @@
                                 <img src="img/icon/services-icon1.svg" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">We collect your clothes</a></h5>
-                                <p>The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!</p>
+                                <h5><a href="services.html">We Arrive at Your Home</a></h5>
+                                <p>Our professional cleaning team arrives at your home, fully prepared to clean all areas with care and precision!</p>
                             </div>
                         </div>
                     </div>
@@ -55,8 +55,8 @@
                                 <img src="img/icon/services-icon2.svg" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Wash your clothes</a></h5>
-                                <p>The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!</p>
+                                <h5><a href="services.html">We Clean Your Home</a></h5>
+                                <p>We thoroughly clean your home, ensuring every space is spotless and fresh!</p>
                             </div>
                         </div>
                     </div>
@@ -66,8 +66,8 @@
                                 <img src="img/icon/services-icon3.svg" alt="">
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Get delivery</a></h5>
-                                <p>The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!</p>
+                                <h5><a href="services.html">Enjoy Your Clean Home</a></h5>
+                                <p>Once we’re done, you can relax and enjoy a sparkling, clean home!</p>
                             </div>
                         </div>
                     </div>
@@ -82,14 +82,14 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <span class="element">Services</span>
-                            <h2>Services we offer</h2>
+                            <h2>Our Cleaning Services</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col-lg-6 col-md-6">
                         <div class="single-offers">
-                            <img src="img/gallery/offers1.png" alt="" class=" w-100">
+                            <img src="img/service-1.jpg" alt="" class=" w-100">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -100,8 +100,8 @@
                                     <img src="img/icon/offers-icon1.png" alt="">
                                 </div>
                                 <div class="cat-cap">
-                                    <h5><a href="services.html">Cloth laundry</a></h5>
-                                    <p>The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!!</p>
+                                    <h5><a href="services.html">Full Home Cleaning</a></h5>
+                                    <p>Our professional cleaners ensure that every room in your home is thoroughly cleaned and sparkling. Enjoy a fresh and tidy living space after every service!!</p>
                                 </div>
                             </div>
                         </div>
@@ -114,15 +114,15 @@
                                     <img src="img/icon/offers-icon1.png" alt="">
                                 </div>
                                 <div class="cat-cap">
-                                    <h5><a href="services.html">Cloth ironing</a></h5>
-                                    <p>The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!!</p>
+                                    <h5><a href="services.html">Deep Cleaning Services</a></h5>
+                                    <p>Our team provides detailed and deep cleaning for areas that need extra attention, ensuring every corner of your home is spotless and fresh!!</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="single-offers">
-                            <img src="img/gallery/offers4.png" alt="" class=" w-100">
+                            <img src="img/service-4.jpg" alt="" class=" w-100">
                         </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                             <div class="testmonial-item-active text-center">
                                 <!-- testimonial-single-items -->
                                 <div class="testmonial-item ">
-                                    <p class="pera">The automated process starts as soon as your clothes go into the<br> machine. The outcome is gleaming clothes!</p>
+                                    <p class="pera">The Homecare team did an amazing job! My house has never looked so clean and fresh.<br> I’m incredibly impressed with the attention to detail!</p>
                                     <div class="rating">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -180,11 +180,11 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <p> - Rupaya</p>
+                                    <p> - Emma</p>
                                 </div>
                                 <!-- testimonial-single-items -->
                                 <div class="testmonial-item ">
-                                    <p class="pera">The automated process starts as soon as your clothes go into the<br> machine. The outcome is gleaming clothes!</p>
+                                    <p class="pera">After using Homecare, my living room and kitchen were spotless. The team was professional,<br> The team was professional, quick, and very friendly. Highly recommend!</p>
                                     <div class="rating">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -192,11 +192,11 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <p> - Rupaya</p>
+                                    <p> - Michael</p>
                                 </div>
                                 <!-- testimonial-single-items -->
                                 <div class="testmonial-item ">
-                                    <p class="pera">The automated process starts as soon as your clothes go into the<br> machine. The outcome is gleaming clothes!</p>
+                                    <p class="pera">I’m so happy with the service! Every corner of my home was thoroughly cleaned, <br> and the result was a sparkling, welcoming space.!</p>
                                     <div class="rating">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -204,7 +204,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <p> - Rupaya</p>
+                                    <p> - Sophia</p>
                                 </div>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                         <div class="single-cat text-center">
                             <div class="cat-cap">
                                 <span>4000</span>
-                                <p>The automated process starts as soon as your clothes go into the machine.</p>
+                                <p>Homes cleaned to perfection with our expert services.</p>
                             </div>
                         </div>
                     </div>
@@ -237,7 +237,7 @@
                         <div class="single-cat text-center">
                             <div class="cat-cap">
                                 <span>300+</span>
-                                <p>The automated process starts as soon as your clothes go into the machine.</p>
+                                <p>Professional cleaners on our trusted team.</p>
                             </div>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                         <div class="single-cat text-center">
                             <div class="cat-cap">
                                 <span>95%</span>
-                                <p>The automated process starts as soon as your clothes go into the machine.</p>
+                                <p>Customer satisfaction rate for spotless, fresh homes.</p>
                             </div>
                         </div>
                     </div>
@@ -277,9 +277,9 @@
                                 <h2>About company</h2>
                             </div>
                             <p class="mb-20">
-                                The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!
+                                Homecare is dedicated to providing top-quality home cleaning services!
                             </p>
-                            <p class="mb-30">The automated process starts as soon as your clothes go into the machine. The outcome is gleaming clothes!</p>
+                            <p class="mb-30">Our professional team ensures that every corner of your home is left spotless and fresh, giving you more time to relax and enjoy your clean space!!</p>
 
                             <a href="about.html" class="btn">About Us</a>
                         </div>
